--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/fontawesome-free": "^5.8.1",
     "bootstrap": "^4.3.1",
     "electron-debug": "^2.2.0",
+    "electron-is-dev": "^1.1.0",
+    "electron-updater": "^4.0.6",
     "formik": "^1.5.2",
     "jenkins": "^0.25.0",
     "node-sass": "^4.11.0",
