--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Deployer",
+  "name": "Cross-platform application to deploy your applications through Jenkins.",
   "icons": [
     {
       "src": "favicon.ico",
